# Anilibria-Api-Client

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  request.yml
.github/actions/install-dep/: action.yml
.github/workflows/: openapi-sync.yml  pre-pr.yml  style.yml
anilibria_api_client/: __init__.py  api_client.py  exceptions.py  helper.py  models.py  response_models.py
anilibria_api_client/base_api/: api_class.py
anilibria_api_client/methods/: __init__.py  _helper.py  _libria.py  accounts.py  ads.py  anime.py  app.py  media.py  teams.py
anilibria_api_client/models/: __init__.py  legacy_models.py  models.py
anilibria_api_client/models/responses/: accounts.py
anilibria_api_client/types/: __init__.py  models.py  responses.py
anilibria_api_client/types/codegen/: __init__.py  openapi_models.py
anilibria_api_client/types/codegen/methods/: __init__.py  accounts.py  ads.py  anime.py  app.py  media.py  teams.py
anilibria_api_client/types/schema/: anilibria-v1.openapi.json
anilibria_api_client/types/schema/.tmp/: header.txt  openapi-transformed.json
anilibria_api_client/types/scripts/: __init__.py  check_codegen.py  fetch_openapi.py  generate_codegen.py  update_codegen.py
docs/: conf.py  pages.rst
tests/: README.md  accounts_tests.py  ads_tests.py  anime_tests.py  cli_search_anime.py  fixtures.py  test_generated_openapi.py
tests/methods/: test_account.py
