[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anilibria-api-client"
version = "0.2.2"
description = "Python async API wrapper for AniLibria Swagger"
authors = [
    {name = "whynotix", email = "syoma.bolotov@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "aiofiles==24.1.0",
    "pydantic==2.11.7",
    "m3u8-To-MP4==0.1.11",
]

[project.urls]
Homepage = "https://github.com/semen-bol/Anilibria-Api-Client"
Docs = "https://anilibria-api-client.readthedocs.io/stable/"
Issues = "https://github.com/semen-bol/Anilibria-Api-Client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["anilibria_api_client*"]
exclude = ["tests*", "dist*", "build*", "docs*"] 

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
    "sphinx_design>=0.6.1",
    "furo>=2025.7.19",
    "sphinx-hoverxref>=1.3.0",
    "readthedocs-sphinx-search>=0.1.2",
]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry]
name = "anilibria_api_client"
version = "0.2.3"
description = "Client for Anilibria API v1.0"
authors = ["whynotix <syoma.bolotov@bk.ru>"]
license = "MIT"
package-mode=false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.4.0,<9.0.0"
dotenv = ">=0.9.9,<0.10.0"
pytest-asyncio = ">=1.3.0,<2.0.0"